--- a/src/MangaInfo.css
+++ b/src/MangaInfo.css
@@ -21,7 +21,6 @@
 .info-text{
   flex: 1;
   background-size: cover;
-  background-color: rgba(162, 202, 167, 0.541);
   background-position: center;
 }
 
@@ -31,5 +30,5 @@
 }
 
 .chapter:hover + div{
-  color:blue;
+  color:#0275d8;
 }
