--- a/src/MangaInfo.css
+++ b/src/MangaInfo.css
@@ -32,3 +32,42 @@
 .chapter:hover + div{
   color:#0275d8;
 }
+
+.hidden {
+  visibility: hidden;
+}
+
+.pagination {
+  justify-content: center;
+  margin: 15px auto;
+  display: flex;
+  list-style: none;
+  outline: none;
+  color:gray
+}
+.pagination > .active > a{
+  background-color: #0275d8 ;
+  border-color: #0275d8 ;
+  color: #fff;
+}
+.pagination > li > a{
+  border: 1px solid #0275d8 ;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+  background-color: #0275d8 ;
+  border-color: #0275d8;
+  outline: none ;
+}
+.pagination > li > a, .pagination > li > span{
+  color: #0275d8
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+  border-radius: unset
+}
+
+.paging {
+  text-align: center;
+}
