--- a/src/Reader.css
+++ b/src/Reader.css
@@ -1,10 +1,19 @@
-.Reader {
+.reader {
     align-content: center;
     text-align: center;
 }
 /*image styling*/
-.chapter_images {
+.reader-chapter_images {
   width: 50%;
+}
+
+.reader-window {
+    /*background: #333333;*/
+}
+
+.reader-progress-bar {
+    /*background: #333333;*/
+
 }
 
 /*burger menu styling*/
