--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "css_globals.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,4 +13,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+
+}
+
+.root{
+  background: var(--bg-color);
 }
