Added variables to css globals

--- a/src/css/css_globals.css
+++ b/src/css/css_globals.css
@@ -1,9 +1,12 @@
 :root{
     --bg-color: #2b2b2b;
     --primary-color: #a98eda;
+    --primary-color-shadow: #8a74b2;
     --primary-color-hover: #8c68cd;
+    --primary-color-hover-shadow: #7d60b3;
     --secondary-color: #3cf41;
     --tertiary-color: #313335;
     --text-color: #dedede;
+    --text-color-muted: #7a705e;
 
 }
