--- a/src/css/css_globals.css
+++ b/src/css/css_globals.css
@@ -4,8 +4,8 @@
     --primary-color-shadow: #8a74b2;
     --primary-color-hover: #8c68cd;
     --primary-color-hover-shadow: #7d60b3;
-    --secondary-color: #3c3f41;
-    --tertiary-color: #313335;
+    --secondary-color: #313335;
+    --tertiary-color: #3c3f41;
     --text-color: #dedede;
     --text-color-muted: #7a705e;
 
