--- a/src/css/MangaInfo.css
+++ b/src/css/MangaInfo.css
@@ -56,7 +56,7 @@
   color: black;
 }
 .pagination > li > a{
-  border: 1px solid var(--primary-color) ;
+  border: 1px solid var(--primary-color);
   padding: 5px 10px;
   outline: none;
   cursor: pointer;
@@ -66,14 +66,26 @@
   color: var(--text-color);
 }
 
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:focus, .pagination > .active > span:focus{
   background-color: var(--primary-color);
   border-color: var(--primary-color);
   outline: none ;
+  color: black !important;
 }
+
+.pagination > .active > a:hover, .pagination > .active > span:hover{
+  background-color: var(--primary-color-hover);
+  border-color: var(--primary-color-hover);
+}
+
 .pagination > li > a, .pagination > li > span{
   color: #0275d8
 }
+
+.pagination > li > a:hover, .pagination > li > span:hover{
+  color: var(--text-color) !important;
+}
+
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
   border-radius: unset
 }
