--- a/src/css/css_globals.css
+++ b/src/css/css_globals.css
@@ -7,6 +7,6 @@
     --secondary-color: #313335;
     --tertiary-color: #3c3f41;
     --text-color: #dedede;
-    --text-color-muted: #7a705e;
+    --text-color-muted: #8a8a8a;
 
 }
