--- a/src/css/Reader.css
+++ b/src/css/Reader.css
@@ -28,6 +28,32 @@ input[type=range]:focus::-moz-range-thumb{
   box-shadow: 0 0 0 1px var(--primary-color-hover), 0 0 0 .15rem var(--primary-color-hover-shadow);
 }
 
+.reader-window .button-next{
+  float: right;
+  background: transparent;
+  border: none;
+  color: transparent;
+  box-shadow: none;
+  height: 100%;
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+}
+
+.reader-window .button-prev{
+  float: left;
+  background: transparent;
+  border: none;
+  color: transparent;
+  box-shadow: none;
+  height: 100%;
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /*burger menu styling*/
 
 .bm-burger-button {
