--- a/src/css/Reader.css
+++ b/src/css/Reader.css
@@ -54,6 +54,14 @@ input[type=range]:focus::-moz-range-thumb{
   left: 0;
 }
 
+.button-chapter-nav .next{
+
+}
+
+.button-chapter-nav .prev{
+
+}
+
 /*burger menu styling*/
 
 .bm-burger-button {
